# macos-pdf-manager

./: Cargo.toml  README.md  STATUS.md  UIX_ANALYSE.md  analyse_sprint.md  architecture.md  audit50quest.md  sprint.md
.github/workflows/: ci.yml
docs/: EXPLICATION.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: parse_document.rs  render_document.rs
pdf-app/: Cargo.toml
pdf-app/src/: lib.rs
pdf-cli/: Cargo.toml
pdf-cli/src/: main.rs
pdf-core/: Cargo.toml
pdf-core/src/: content.rs  crypt.rs  display.rs  document.rs  encoding.rs  error.rs  filters.rs  font.rs  image.rs  interp.rs  lexer.rs  lib.rs  object.rs  outline.rs  page.rs  parser.rs  signature.rs  writer.rs  xref.rs
pdf-core/tests/fixtures/: README.md
pdf-edit/: Cargo.toml
pdf-edit/src/: lib.rs
pdf-render/: Cargo.toml
pdf-render-gpu/: Cargo.toml
pdf-render-gpu/src/: lib.rs
pdf-render-gpu/tests/: cross_backend.rs
pdf-render/src/: lib.rs
pdf-render/tests/: golden.rs
pdf-render/tests/support/: mod.rs
pdf-text/: Cargo.toml
pdf-text/src/: lib.rs
pdf-ui/: Cargo.toml  document_types.plist.xml
pdf-ui/icons/: icon.icns
pdf-ui/src/: lib.rs  main.rs  native_menu.rs  render_worker.rs
