[package]
name = "pdf-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
flate2 = "1"
thiserror = "1"
ttf-parser = "0.24"
zune-jpeg = "0.5"
# Sprint 22 (#50, audit50quest.md) : déchiffrement `/Encrypt` (ISO 32000-1
# §7.6 / ISO 32000-2 §7.6.4) — primitives cryptographiques auditées plutôt
# que réimplémentées à la main (RC4/MD5/AES/SHA-2 sont des briques
# standard, pas la valeur ajoutée d'un moteur PDF "from scratch" — voir
# `zune-jpeg` déjà utilisé pour le même raisonnement côté JPEG).
md-5 = "0.10"
sha2 = "0.10"
aes = "0.8"
cbc = "0.1"
# Sprint 59 (#50/signatures numériques, sprint.md Sprint 23+) : vérification
# cryptographique de signature `/Sig` (PKCS#7/CMS détaché, ISO 32000-1
# §12.8.3.3) — RSA/SHA-2 seulement (le cas très majoritaire en pratique),
# pas de validation de chaîne de confiance/révocation (voir la doc de
# module de `signature.rs`). `cms` est en pré-version (`0.3.0-pre.2`,
# encore aucune version stable publiée à ce jour) et tire `der`/`spki` en
# version 0.8, incompatible au niveau des types avec `rsa`/`pkcs8` (version
# 0.7 transitive) — contournement systématique par aller-retour en octets
# DER bruts plutôt que conversion directe, voir `signature.rs`.
cms = "0.3.0-pre.2"
der = "0.8"
x509-cert = "0.3"
rsa = "0.9"
sha1 = "0.10"

[dev-dependencies]
