[package]
name = "pdf-render-gpu"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pdf-core = { workspace = true }
wgpu = "22"
lyon = "1.0"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.3"

[dev-dependencies]
pdf-render = { workspace = true }
