[package]
name = "pdf-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pdf-ui"
path = "src/main.rs"

[dependencies]
pdf-app = { workspace = true }
pdf-render-gpu = { workspace = true }
eframe = { version = "0.29", features = ["wgpu"] }
egui = "0.29"
wgpu = "22"
rfd = "0.15"
