[package]
name = "pdf-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "PapyrusPDF"
path = "src/main.rs"

[dependencies]
pdf-app = { workspace = true }
pdf-edit = { workspace = true }
pdf-core = { workspace = true }
pdf-render = { workspace = true }
pdf-render-gpu = { workspace = true }
eframe = { version = "0.29", features = ["wgpu"] }
egui = "0.29"
wgpu = "22"
rfd = "0.15"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["std", "NSApplication", "NSMenu", "NSMenuItem", "NSResponder", "NSWindow", "NSRunningApplication", "NSEvent", "NSAppearance"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["std", "NSObject", "NSString"] }

# Sprint 11-12 (sprint.md) : métadonnées de bundle macOS pour `cargo bundle`
# (crate `cargo-bundle`). Produit un `.app` (`cargo bundle --release -p
# pdf-ui --format osx`), packagé ensuite en `.dmg` via `hdiutil` (voir
# STATUS.md pour la commande complète et ses limites : pas de signature/
# notarisation réelles sans un compte Apple Developer, non disponible dans
# cet environnement de développement).
[package.metadata.bundle]
name = "PapyrusPDF"
identifier = "com.lberthod.papyruspdf"
short_description = "Visionneuse et éditeur PDF natif macOS (moteur maison)"
category = "public.app-category.productivity"
copyright = "Copyright 2026 Loïc Berthod"
icon = ["pdf-ui/icons/icon.icns"]
# Sprint 22 (#1, audit50quest.md) : déclare la capacité à ouvrir des PDF
# (`CFBundleDocumentTypes`, "Alternate" pour apparaître dans "Ouvrir avec…"
# sans devenir le gestionnaire par défaut sans consentement explicite de
# l'utilisateur) — `cargo-bundle` n'a pas de champ dédié pour ça, mais fusionne
# tel quel le contenu de tout fichier listé ici dans l'`Info.plist` généré
# (voir `osx_bundle.rs::create_info_plist`).
osx_info_plist_exts = ["pdf-ui/document_types.plist.xml"]
